feat: небольшие фиксы
