# bookingservice/docs/swagger.json
@@ -94,13 +94,10 @@
                 "summary": "Получить все бронирования по названию отеля",
                 "parameters": [
                     {
-                        "description": "Название отеля",
-                        "name": "hotelName",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.HotelName"
-                        }
+                        "type": "string",
+                        "description": "имя отеля",
+                        "name": "name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -136,13 +133,22 @@
                 "summary": "Получить свободные комнаты по дате и названию отеля",
                 "parameters": [
                     {
-                        "description": "Название отеля с датой",
-                        "name": "DateWithHotelName",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.DateWithHotelName"
-                        }
+                        "type": "string",
+                        "description": "имя отеля",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "дата заезда в формате 2006-01-02",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "дата отъезда в формате 2006-01-02",
+                        "name": "to",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -241,28 +247,6 @@
                     "type": "integer"
                 },
                 "to": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.DateWithHotelName": {
-            "type": "object",
-            "properties": {
-                "from": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "to": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.HotelName": {
-            "type": "object",
-            "properties": {
-                "name": {
                     "type": "string"
                 }
             }
